<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="405dp"
        android:layout_height="29dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ls_time"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:text="@string/ls_time" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="402dp"
        android:layout_height="59dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/ls_temp"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/status" />

        <TextView
            android:id="@+id/ls_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/temp" />

        <TextView
            android:id="@+id/ls_wind"
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/ls_humidity"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/ls_pressure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pressure" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>