<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/updated_at"
            android:layout_width="149dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/arbutus"
            android:text="@string/updated_at"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="amethysta"
            android:text="@string/desc"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/amethysta"
            android:text="@string/temp"
            android:textSize="18sp"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>